# legopolitics

./: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  LICENSE  MANIFEST.in  MODEL_INTEGRATION_GUIDE.md  MODEL_INTEGRATION_VALIDATION.md  MODEL_LICENSES.md  NOTICE  PUBLICATION_READINESS.md  PUBLISHING.md  README.md  REDISTRIBUTION.md  THIRD_PARTY_LICENSES.md  TRADEMARK_NOTICE.md  TRADEMARK_REVIEW.md  VALIDATION_REPORT.md  YOLO26_INTEGRATION_REPORT.md  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md
configs/: comprehensive.yaml  huggingface_vlm_cpu.yaml  huggingface_vlm_small_gpu.yaml  lego_figure_detector.yaml  minimal.yaml  object_taxonomy.yaml  propaganda_codebook.yaml
detection/: fusion.py  grounding_dino.py  mock.py  transformers_zero_shot.py
docker/: Dockerfile.cpu  Dockerfile.cuda
docs/: audio.md  citation.md  cli.md  configuration.md  custom_yolo_model.md  ethical_considerations.md  excel_workbook.md  gpu_optimization.md  huggingface_vlm_ensemble.md  index.md  installation.md  legal.md  limitations.md  methodology.md  model_licensing.md  narrative_analysis.md  object_detection.md  ocr.md  offline_use.md  open_vocabulary_detection.md  output_schemas.md  outputs.md  parallel_batches.md  parquet_dataset.md  plugins.md  political_codebook.md  python_api.md  quick_start.md  remote_privacy.md  reproducibility.md  sampling.md  segmentation.md  sqlite_manifest.md  tracking.md  troubleshooting.md  tutorial.md  validation.md  visual_models.md  windows_unc.md
examples/: batch_processing.py  custom_plugin.py  python_api.py
github-files/workflows/: pages.yml
model_assets/lego_figure_yolo26s/: MODEL_CARD.md  model_metadata.json
model_assets/lego_figure_yolo26s/training_artifacts/: results.csv
models/: README.md
notebooks/: 01_quick_start.ipynb  02_sampling_comparison.ipynb  03_yolo_detection.ipynb  04_tracking_and_segmentation.ipynb  05_visual_model_comparison.ipynb  06_ocr_and_audio.ipynb  07_context_bias_analysis.ipynb  08_codebook_analysis.ipynb  09_human_validation.ipynb  10_batch_processing.ipynb
ocr/: base.py  deduplicate.py  provider.py
prompting/: rendering.py  schemas.py
reporting/: citations.py
review/: app.py  media.py  state.py
schemas/: audio.py  event.py  mask.py  narrative.py  track.py  video.py  visual.py
scripts/: check_release_readiness.py  check_trademark_review.py  generate_dependency_inventory.py
segmentation/: mask_utils.py  sam3.py
src/legopolitics/: __init__.py  analyzer.py  api.py  cli.py  constants.py  exceptions.py
src/legopolitics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/legopolitics/analysis/: __init__.py  actions.py  colors.py  (+12 more)
src/ocr/: __init__.py  regions.py  trocr.py
src/pipeline/: cache.py  context.py  orchestrator.py  planner.py
src/prompting/: __init__.py  codebook.py  templates.py  versioning.py
src/reporting/: __init__.py  charts.py  html.py
src/resources/: __init__.py  huggingface_vlm_maximum.yaml  huggingface_vlm_midrange_gpu.yaml  lego_figure_yolo26s.yaml
storage/: __init__.py  excel.py  export.py  manifest.py  migrations.py  sqlite.py
tests/: conftest.py  test_cli.py  test_config.py  test_detection.py  test_directory_batches.py  test_discovery_probe.py  test_end_to_end.py  test_excel.py  test_fingerprints.py  test_hf_vlm.py  test_manifest.py  test_ocr.py  test_parquet_optional.py  test_parsing_ensemble.py  test_provider_ocr.py  test_quality_hashing.py  test_salience_relations.py  test_sampling.py  test_tracking.py  test_trademark.py  test_validation.py  test_yolo_class_filter.py
tracking/: association.py  reid.py  sam3_track.py  yolo_track.py
utils/: device.py  logging.py  retry.py
validation/: agreement.py  gold.py
video/: __init__.py  audio_extract.py  hashing.py  sampling.py
vision/: blip2.py  clip.py  ensemble.py  florence2.py  hf_vlm.py  prompts.py  provider_api.py  registry.py
yolo26s_results/: args.yaml
(+81 files in other folders)
