[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "legopolitics"
version = "0.1.1"
description = "A multimodal research pipeline for analyzing political narratives in brick-built videos."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "Cantay Caliskan" },
]
keywords = [
  "computational-social-science",
  "political-communication",
  "propaganda-analysis",
  "computer-vision",
  "multimodal-analysis",
  "video-analysis",
  "brick-figures",
  "narrative-analysis",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pydantic>=2.7,<3",
  "typer>=0.26.8,<1",
  "PyYAML>=6,<7",
  "numpy>=1.24",
  "pandas>=2.0",
  "Pillow>=10",
  "opencv-python-headless>=4.8",
  "openpyxl>=3.1",
  "jinja2>=3.1",
  "rich>=13",
]

[project.urls]
Homepage = "https://cantayus.github.io/legopolitics/"
Documentation = "https://cantayus.github.io/legopolitics/"
Repository = "https://github.com/cantayus/legopolitics"
Issues = "https://github.com/cantayus/legopolitics/issues"
Changelog = "https://github.com/cantayus/legopolitics/blob/main/CHANGELOG.md"

[project.optional-dependencies]
yolo = [
  "ultralytics>=8.3",
]
huggingface = [
  "torch>=2.2",
  "transformers>=4.50,<6",
  "accelerate>=1.0",
  "safetensors>=0.4",
]
quantization = [
  "bitsandbytes>=0.43",
]
grounding = [
  "torch>=2.2",
  "transformers>=4.50,<6",
]
segmentation = [
  "torch>=2.2",
  "transformers>=4.50,<6",
]
tracking = [
  "scipy>=1.11",
]
audio = [
  "torch>=2.2",
  "transformers>=4.50,<6",
  "faster-whisper>=1.0",
  "soundfile>=0.12",
  "librosa>=0.10",
]
diarization = [
  "pyannote.audio>=3.3",
]
ocr = [
  "torch>=2.2",
  "transformers>=4.50,<6",
]
parquet = [
  "pyarrow>=14",
]
review = [
  "streamlit>=1.38",
]
reporting = [
  "plotly>=5.24",
]
docs = [
  "mkdocs-material>=9.5",
]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff==0.15.21",
  "mypy>=1.11,<2",
  "types-PyYAML>=6.0.12",
  "build>=1.2",
  "wheel>=0.44",
  "twine>=5",
  "mkdocs-material>=9.5",
]
all = [
  "ultralytics>=8.3",
  "torch>=2.2",
  "transformers>=4.50,<6",
  "accelerate>=1.0",
  "safetensors>=0.4",
  "scipy>=1.11",
  "faster-whisper>=1.0",
  "soundfile>=0.12",
  "librosa>=0.10",
  "pyannote.audio>=3.3",
  "pyarrow>=14",
  "streamlit>=1.38",
  "plotly>=5.24",
  "mkdocs-material>=9.5",
]

[project.scripts]
legopolitics = "legopolitics.cli:app"

[project.entry-points."legopolitics.detectors"]

[project.entry-points."legopolitics.segmenters"]

[project.entry-points."legopolitics.trackers"]

[project.entry-points."legopolitics.vision_models"]

[project.entry-points."legopolitics.ocr"]

[project.entry-points."legopolitics.asr"]

[project.entry-points."legopolitics.exporters"]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
legopolitics = [
  "py.typed",
  "resources/*.yaml",
  "resources/*.json",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
]
ignore = [
  "E501",
]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = [
  "notebooks/",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = [
  "tests",
]
markers = [
  "slow: tests requiring large models or external resources",
  "cuda: tests requiring CUDA",
  "internet: tests requiring network access",
]